--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,10 +22,10 @@
     --line-height-normal: 1.7;
     --line-height-small: 1.2;
 
-    --black: #000;
-    --pink: #ff3258;
-    --white: #f0e9f2;
-    --white-1: #e5e5e6da;
+    --black: #213555;
+    --pink: #4F709C;
+    --white: #D8C4B6;
+    --white-1: #F5EFE7;
 
 
     --container-max-width: 1180px;
@@ -202,7 +202,8 @@ body:not(.user-is-tabbing) a:focus {
 .btn {
     position: relative;
     display: inline-block;
-    padding: 1rem 4.2rem;
+    padding: 1rem;
+    margin-top: 1rem;
     text-decoration: none;
     color: inherit;
     border: 1px solid  var(--pink);
@@ -323,13 +324,18 @@ body:not(.user-is-tabbing) a:focus {
 
 .nav {
     display: flex;
-    justify-content: flex-end;
+    width: 100%;
+    position: fixed;
+    text-align: center;
+    margin: auto;
     padding: var(--gutter-normal) 0;
 }
 
 .nav__items {
     display: flex;
     list-style: none;
+    width: 100%;
+    justify-content: center;
 }
 
 .nav__item:not(:last-child) {
@@ -390,6 +396,7 @@ body:not(.user-is-tabbing) a:focus {
 /* --------------------------------------- */
 
 .header {
+    background: linear-gradient(rgba(0,0,0, .1), rgba(0,0,0, .4)), url('https://cdn.pixabay.com/photo/2018/01/17/20/22/analytics-3088958_1280.jpg');
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -594,3 +601,107 @@ body:not(.user-is-tabbing) a:focus {
         padding: var(--gutter-medium) 0;
     } 
 }
+
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: #D8C4B6;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #4F709C;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid #D8C4B6;  /* creates padding around scroll thumb */
+  }
+
+  
+  
+  .rectangle {
+    background-color: rgba(128, 128, 128, 0.5);
+    position: relative;
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(5px);
+    border: 4px solid rgba(255, 255, 255, 0.18);
+    z-index: 1;
+  }
+  
+  .left-list, .right-list {
+    list-style: none;
+    padding: 0;
+    margin: 10px;
+  }
+  
+  .left-list li, .right-list li {
+    margin-bottom: 10px;
+  }
+  
+  #blue-square {
+    text-align: center;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    background-color: #4F709C;
+    cursor: grab; 
+  }
+    #blue-square p {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+  
+    
+    @media screen and (max-width: 500px){
+        .circle{
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            transform: translate(-1rem, 2rem);
+            z-index: 0;
+            border-radius: 50%;
+            background: linear-gradient(to right,  #0062a3, #29ABE2);
+        }
+        
+        .circle:nth-child(2){
+            display: none;
+        }
+    }
+    
+    @media screen and (min-width: 501px) and (max-width: 768px){
+        .circle{
+            display: none;
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            transform: translate(-5rem, 4rem);
+            z-index: 0;
+            border-radius: 50%;
+            background: linear-gradient(to right,  #0062a3, #29ABE2);
+        }
+        
+        .circle:nth-child(2){
+            display: none;
+        }
+    }
+    @media screen and (min-width: 769px){
+        .circle{
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            transform: translate(-15rem, 9rem);
+            z-index: 0;
+            border-radius: 50%;
+            background: linear-gradient(to right,  #0062a3, #29ABE2);
+        }
+        
+        .circle:nth-child(2){
+            background: linear-gradient(to right, #F15, #F15A2A);
+            transform: translate(83rem,-7rem)
+        }
+    }
+
+    
